--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+ul,li{
+  list-style: none;
+}
+ul{
+  margin:0;
+  padding: 0;
+}
