--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 14px;
 }
 
 code {
@@ -19,6 +20,7 @@ ul{
   margin:0;
   padding: 0;
 }
+
 
 
 /* 自定义元素 */
